Add start on a section about logging
It's hard to find information on how one should write logging code in Hotspot. This PR is only a first attempt at pointing the reader in the right direction, but a lot could be added in the futute:
 * In which contexts can one not use unified logging?
 * How much should one log?
 * What other logging strategies are there?